Add appointments
